# xorfbench

./: Cargo.toml  Justfile  README.md
benches/: contains.rs  speed.rs
result/build_filters/102400/report/: index.html
result/build_filters/1024000/report/: index.html
result/build_filters/204800/report/: index.html
result/build_filters/307200/report/: index.html
result/build_filters/409600/report/: index.html
result/build_filters/512000/report/: index.html
result/build_filters/614400/report/: index.html
result/build_filters/716800/report/: index.html
result/build_filters/819200/report/: index.html
result/build_filters/921600/report/: index.html
result/build_filters/BinaryFuse32/report/: index.html
result/build_filters/Bloomfilter/report/: index.html
result/build_filters/Xor32/report/: index.html
result/build_filters/report/: index.html
result/contains_hit/102400/report/: index.html
result/contains_hit/1024000/report/: index.html
result/contains_hit/204800/report/: index.html
result/contains_hit/307200/report/: index.html
result/contains_hit/409600/report/: index.html
result/contains_hit/512000/report/: index.html
result/contains_hit/614400/report/: index.html
result/contains_hit/716800/report/: index.html
result/contains_hit/819200/report/: index.html
result/contains_hit/921600/report/: index.html
result/contains_hit/BinaryFuse32/report/: index.html
result/contains_hit/Bloomfilter/report/: index.html
result/contains_hit/Xor32/report/: index.html
result/contains_hit/report/: index.html
result/report/: index.html
(+340 files in other folders)
